--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,4 +1,4 @@
-{% extends '_template.html.twig' %}
+{% extends "_template.html.twig" %}
 
 {% block title %}
     Accueil
@@ -6,7 +6,42 @@
 
 {% block content %}
     <div class="section">
-        <h1 class="title">Accueil</h1>
-    </div>
+        <h1 class="title">Accueil - Nouveautés</h1>
 
+        <div class="columns is-multiline">
+            {% for product in new_products %}
+                <div class="column is-one-third">
+                    <div class="box">
+                        <article class="media">
+                            <div class="media-left">
+                                <figure class="image is-128x128">
+                                    <img src="https://loremflickr.com/256/256/clothes/all?lock={{ product.id }}" alt="Image">
+                                </figure>
+                            </div>
+                            <div class="media-content">
+                                <div class="content">
+                                    <p>
+                                        <a href="#" class="has-text-primary">
+                                            <strong>{{ product.name }}</strong>
+                                        </a>
+                                        <small>{{ product.createdAt|date('d/m/Y') }}</small>
+                                        <br>
+                                        {{ product.description|slice(0, 50) }}
+                                    </p>
+                                    <div class="tags has-addons">
+                                        <span class="tag">{{ product.priceFloat|number_format(2, '.', ' ') }}</span>
+                                        <span class="tag is-primary">
+                                            <span class="icon">
+                                                <i class="fas fa-euro-sign"></i>
+                                            </span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
