AJOUTER les nouveauté en page d'accueil si ça marche pas c'est de la faute à Moussa

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,7 +10,7 @@
 
         <div class="columns is-multiline">
             {% for product in new_products %}
-                <div class="column is-one-third">
+                <div class="column is-one-third">git
                     <div class="box">
                         <article class="media">
                             <div class="media-left">
