AJOUTER les pages de produits

--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -4,8 +4,8 @@
     {# Menu qui sera affiché sur toutes les pages du Front-Office #}
     <nav class="navbar has-background-grey-darker is-dark">
         <div class="navbar-brand">
-            <a class="navbar-item" href="#">
-                <p class="subtitle is-4 has-text-primary"><b>SITE</b>
+            <a class="navbar-item" href={{ path('home') }}>
+                <p class="subtitle is-4 has-text-primary"><b>ECOMMERCE</b>
                 </p>
             </a>
 
@@ -18,8 +18,8 @@
 
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item" href="#">
-                    Item
+                <a class="navbar-item" href={{ ('product_list') }}>
+                    Produits
                 </a>
             </div>
 
