--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -4,9 +4,8 @@
     {# Menu qui sera affiché sur toutes les pages du Front-Office #}
     <nav class="navbar has-background-grey-darker is-dark">
         <div class="navbar-brand">
-            <a class="navbar-item" href={{ path('home') }}>
-                <p class="subtitle is-4 has-text-primary"><b>ECOMMERCE</b>
-                </p>
+            <a class="navbar-item" href="{{ path('home') }}">
+                <p class="subtitle is-4 has-text-primary"><b>ECOMMERCE</b></p>
             </a>
 
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -18,7 +17,7 @@
 
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item" href={{ ('product_list') }}>
+                <a class="navbar-item" href="{{ path('product_list') }}">
                     Produits
                 </a>
             </div>
@@ -27,10 +26,9 @@
                 <div class="navbar-item">
                     <div class="buttons">
                         {% if app.user %}
-                            <a class="button is-primary is-small" href="#">
+                            <a class="button is-primary is-small" href="{{ path('account_profile') }}">
                                 <span class="icon"><i class="fas fa-user-circle"></i></span>
-                                <span><strong>{{app.user.username}}</strong></span>
-
+                                <span><strong>{{ app.user.username }}</strong></span>
                             </a>
                             <a class="button is-light is-small" href="{{ path('app_logout') }}">
                                 <i class="fas fa-sign-out-alt"></i>
