AJOUTE le CRUD des produits en Back-Office

--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -17,6 +17,13 @@
 
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
+                {% if is_granted('ROLE_ADMIN') %}
+                    <a href="navbar-item" href="{{ path('admin_product_list') }}">
+                        <span class="icon"><i class="fas fa-lock"></i></span>
+                        <span>Back-Office</span>
+                    </a>
+                    
+                {% endif %}
                 <a class="navbar-item" href="{{ path('product_list') }}">
                     Produits
                 </a>
